- display publisher and stats as rows - move profile cards 2px away from each other vertically - move profile buttons to the right - add space to replacement text of pub links

--- a/TASVideos/Pages/Activity/Judges.cshtml
+++ b/TASVideos/Pages/Activity/Judges.cshtml
@@ -20,9 +20,9 @@
 <p>Submissions judged by <profile-link username="@Model.UserName"></profile-link></p>
 <hr />
 <label>Total: @total</label><br />
-Accepted: @acceptedTotal (@acceptedTotal.ToPercent(total)%)
-Rejected: @rejectedTotal (@rejectedTotal.ToPercent(total)%)
-Cancelled: @cancelledTotal (@cancelledTotal.ToPercent(total)%)
+<div>Accepted: @acceptedTotal (@acceptedTotal.ToPercent(total)%)</div>
+<div>Rejected: @rejectedTotal (@rejectedTotal.ToPercent(total)%)</div>
+<div>Cancelled: @cancelledTotal (@cancelledTotal.ToPercent(total)%)</div>
 <hr />
 <div class="table-container">
 	<table class="table table-striped">
