--- a/TASVideos/Pages/Activity/Publishers.cshtml
+++ b/TASVideos/Pages/Activity/Publishers.cshtml
@@ -2,8 +2,30 @@
 @{ ViewData["Title"] = $"Publisher Activity for {Model.UserName}"; }
 @model PublishersModel
 
+@{
+	var counts = new Dictionary<string, int>();
+	var total = Model.Publications.Count();
+	var classes = Model.Publications
+		.Select(p => p.Class)
+		.Distinct();
+	foreach (var c in classes)
+	{
+		counts.Add(c, Model.Publications
+			.Select(p => p)
+			.Where(p => p.Class == c)
+			.Count());
+	}
+}
+
 <p>Movies published by <profile-link username="@Model.UserName"></profile-link></p>
 <hr />
+<label>Total: @total</label>
+@foreach (var c in counts)
+{
+	<div>@c.Key: @c.Value</div>
+}
+<hr />
+
 <div class="table-container">
 	<table class="table table-striped">
 		<tr>
